--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             </nav>
         </header>
 
-      
-
         <main>    
-            <div class="pitch">
+            <div class="terrain">
                  <!--442--> 
                 <div class="container">
                     <div class="box1">
